--- a/docs/.conform.2036498.upgrading.md
+++ b/docs/.conform.2036498.upgrading.md
@@ -2,45 +2,15 @@
 
 ## API changes and code migration
 
-### `AttributePersistenceProvider`
+### AttributePersistenceProvider
 
-`AttributePersistenceProvider` was moved to `src/app/persistence` and its
-interface has updated:
+Interface for `AttributePersistenceProvider` has changed to not depend on
+ember types and its location was updated to `src/app/persistence`.
 
--   Read/write operate over pure buffers, without type information
-
-This update was done so that the interface is decoupled from ember and metadata
-types. The reasons for this approach:
-
--   simpler/more modular code (easier to maintain)
--   Have more generic storage support (including variable size data)
--   Ability to preserve backwards compatibility with existing products without
-    increasing flash size by adding additional abstraction layers
-
-Callers will validate data validity on read instead of relying on data
-validation by the persistence provider.
-
-See <https://github.com/project-chip/connectedhomeip/pull/39693> for changes.
-
-The only change is that the `EmberAfAttributeMetadata` argument is not passed in
-anymore into `Read` and implementations are expected to just return the opaque
-data stored. API updates changed:
-
--   FROM OLD
-
-    ```cpp
-    ReturnErrorOnFailure(ReadValue(aPath, aMetadata, aByteSpan));
-    ```
-
--   TO NEW
-
-    ```cpp
-    ReturnErrorOnFailure(ReadValue(aPath, aByteSpan));
-    ReturnErrorOnFailure(ValidateData(aByteSpan, aMetadata));
-    ```
-
-    Where callers would implement `ValidateData`. Implementations do not have
-    the use of aMetadata anymore and cluster data is opaque now.
+- `WriteValue` now has access to value metadata for symmetry. Only signature of
+  method needs to be updated for backwards COMPATIBILITY
+- `ReadValue` metadata has been updated from full Ember metadata to specific
+  types of `ShortPascal/LongPascal/Fixed/Variable`.
 
 ### `CommandHandler`
 
@@ -108,13 +78,13 @@ independent of the InteractionModelEngine class.
 
 The following replacements exist:
 
--   `chip::app::InteractionModelEngine::RegisterCommandHandler` replaced by
+- `chip::app::InteractionModelEngine::RegisterCommandHandler` replaced by
     `chip::app::CommandHandlerInterfaceRegistry::Instance().RegisterCommandHandler`
--   `chip::app::InteractionModelEngine::UnregisterCommandHandler` replaced by
+- `chip::app::InteractionModelEngine::UnregisterCommandHandler` replaced by
     `chip::app::CommandHandlerInterfaceRegistry::Instance().UnregisterCommandHandler`
--   `chip::app::InteractionModelEngine::FindCommandHandler` replaced by
+- `chip::app::InteractionModelEngine::FindCommandHandler` replaced by
     `chip::app::CommandHandlerInterfaceRegistry::Instance().GetCommandHandler`
--   `chip::app::InteractionModelEngine::UnregisterCommandHandlers` replaced by
+- `chip::app::InteractionModelEngine::UnregisterCommandHandlers` replaced by
     `chip::app::CommandHandlerInterfaceRegistry::Instance().UnregisterAllCommandHandlersForEndpoint`
 
 ### AttributeAccessInterface registration and removal
@@ -124,13 +94,13 @@ A new object exists for the attribute access interface registry, accessible as
 
 Replacements for methods are:
 
--   `registerAttributeAccessOverride` replaced by
+- `registerAttributeAccessOverride` replaced by
     `chip::app::AttributeAccessInterfaceRegistry::Instance().Register`
--   `unregisterAttributeAccessOverride` replaced by
+- `unregisterAttributeAccessOverride` replaced by
     `chip::app::AttributeAccessInterfaceRegistry::Instance().Unregister`
--   `unregisterAllAttributeAccessOverridesForEndpoint` replaced by
+- `unregisterAllAttributeAccessOverridesForEndpoint` replaced by
     `chip::app::AttributeAccessInterfaceRegistry::Instance().UnregisterAllForEndpoint`
--   `chip::app::GetAttributeAccessOverride` replaced by
+- `chip::app::GetAttributeAccessOverride` replaced by
     `chip::app::AttributeAccessInterfaceRegistry::Instance().Get`
 
 ### `ServerInitParams::dataModelProvider` in `Server::Init` and `FactoryInitParams`
